2016-06-28 Robert D. Vincent <robert.d.vincent@mcgill.ca>
	* intersect/plane_polygons.c: Fix bug which caused strange gaps
	in the surface's outline in the slice window. Removed unused
	code.

2016-06-11 Robert D. Vincent <robert.d.vincent@mcgill.ca>
	* slice_window/colour_coding.c, callbacks/volume_ops.c, etc.:
	Implement ability to "colourize" a 3D object using only the
	current label colours.

2016-06-07 Robert D. Vincent <robert.d.vincent@mcgill.ca>
	* slice_window/intensity_plot.c, etc.: Display the label colours
	superimposed on the intensity plot graph.

2016-06-02 Robert D. Vincent <robert.d.vincent@mcgill.ca>
	* slice_window/outline.c, Include/global_variables.h: Draw
	the outlines of markers in the slice windows. Can be disabled
	with the Show_markers_on_slice global.

2016-05-31 Robert D. Vincent <robert.d.vincent@mcgill.ca>
	* main/main.c: Allow specific colours to be assigned to loaded
	surfaces by appending ':<colour>' to the file name as it appears
	on the command line.

2016-05-12 Robert D. Vincent <robert.d.vincent@mcgill.ca>
	* callbacks/marker_ops.c, menu/*: Update marker commands. Command
	now switches type from cube to sphere without prompting user;
	Added the ability to change a marker's colour. General cleanup of
	marker commands and some related code.

2016-05-07 Robert D. Vincent <robert.d.vincent@mcgill.ca>
	* main/main.c, callbacks/quit.c, et al.: Implement "Save
	Globals" command to store the current global configuration
	to a file.

2016-05-06 Robert D. Vincent <robert.d.vincent@mcgill.ca>
	* Include/global_variables.h, callbacks/volume_ops.c,
	menu/input_menu.c: Add '[' and ']' keys to move more quickly
	through slice coordinates.

2016-05-05 Robert D. Vincent <robert.d.vincent@mcgill.ca>
	* slice_window/{draw_slice.c, view.c}, Include/global_variables.h:
	Show both voxel and world coordinates of the crosshair cursor
	in the slice window.

2016-04-28  Claude Lepage <claude@bic.mni.mcgill.ca>